--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "RevAI",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
+  
   },
   "keywords": [
     "AI"
@@ -12,6 +14,8 @@
   "author": "Souvik Sural",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
