--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
-  
   },
   "keywords": [
     "AI"
@@ -14,6 +13,7 @@
   "author": "Souvik Sural",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.12.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
