--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.507.0",
+    "motion": "^12.10.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
