--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.10.0",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-simple-code-editor": "^0.9.15",
+    "react-split": "^2.0.14",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
