--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "lucide-react": "^0.507.0",
