--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-simple-code-editor": "^0.9.15",
     "react-split": "^2.0.14",
     "tailwind-merge": "^3.2.0",
