--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "react-markdown": "^10.1.0",
     "react-simple-code-editor": "^0.9.15",
     "react-split": "^2.0.14",
+    "remark-emoji": "^5.0.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
